--- a/Source/MaxLand/Binary/Help/Index.htm
+++ b/Source/MaxLand/Binary/Help/Index.htm
@@ -1,13 +1,271 @@
-<HTML>
-<HEAD><TITLE>MaxLand Help Index</TITLE></HEAD>
+<html>
 
-<FRAMESET COLS="200,*">
+<head>
+<meta http-equiv=Content-Type content="text/html; charset=us-ascii">
+<meta name=Generator content="Microsoft Word 10 (filtered)">
+<title>Help - MaxLand</title>
 
-	<FRAME NAME="menu" SRC="tree.html" SCROLLING=AUTO NORESIZE>
-	<FRAME NAME="help" SRC="introduction.htm">
+<style>
+<!--
+ /* Style Definitions */
+ p.MsoNormal, li.MsoNormal, div.MsoNormal
+	{margin:0in;
+	margin-bottom:.0001pt;
+	font-size:12.0pt;
+	font-family:"Times New Roman";}
+h3
+	{margin-right:0in;
+	margin-left:0in;
+	font-size:13.5pt;
+	font-family:"Times New Roman";
+	font-weight:bold;}
+a:link, span.MsoHyperlink
+	{color:blue;
+	text-decoration:underline;}
+a:visited, span.MsoHyperlinkFollowed
+	{color:blue;
+	text-decoration:underline;}
+p
+	{margin-right:0in;
+	margin-left:0in;
+	font-size:12.0pt;
+	font-family:"Times New Roman";}
+@page Section1
+	{size:8.5in 11.0in;
+	margin:1.0in 1.25in 1.0in 1.25in;}
+div.Section1
+	{page:Section1;}
+-->
+</style>
 
-</FRAMESET>
-<NOFRAMES>
-Your browser doesn't support frames.
-</NOFRAMES>
-</HEAD>
+</head>
+
+<body lang=EN-US link=blue vlink=blue>
+
+<div class=Section1>
+
+<h3>MaxLand</h3>
+
+<p>Maxel is a game of environment challenges. In a desolate unknown land you
+are the queen of a palace carved into the side of a mountain by chess pieces and
+must discover Earth, Win, Fire and Water. </p>
+
+<p><a href="screenshot.png"><span style='text-decoration:none'><img border=0
+width=128 height=128 src=screenshot.PNG></span></a>&nbsp;<a
+href="screenshot2.png"><span style='text-decoration:none'><img border=0
+width=128 height=128 src=screenshot2.PNG></span></a>&nbsp;<a
+href="screenshot3.png"><span style='text-decoration:none'><img border=0
+width=128 height=128 src=screenshot3.PNG></span></a> </p>
+
+<h3>Web</h3>
+
+<p>For information on Neotext software, <a href="http://www.neotext.org"
+target="_new">click here</a>. </p>
+
+<p>For information on the Markup Language and VBScript used in MaxLand <a
+href="Maxland%20Markup%20Language%20Syntax%20and%20Reference.doc">click here</a>.</p>
+
+<p>For a SketchUp 2014 Plugin that allows you to export to DirectX dot X files <a
+href="SketchUp%202014.zip">click here</a>.</p>
+
+<h3>3D Controls</h3>
+
+<p style='margin-bottom:12.0pt'>As written on the top of the screen during play
+is the controls which are as follows:<br>
+E=Forward, D=Back, W/R=Sideways, SPACE=Jump, TILDA=Console, ESC=Exit<br>
+<br>
+E = Makes your player go forward.<br>
+D = Makes your player go backwards.<br>
+W/R = Makes your player move sideways.<br>
+SPACE = Makes your player jump up. <br>
+F1 = Toggles similar on screen help.<br>
+F2 = Toggle on screen debug info.<br>
+F3 = Resets the game, immediately. <br>
+&nbsp;F5 = Cycle different view perspectives.<br>
+TILDA = Toggles visibility of the console.<br>
+ESC = Exits the focus and closes the game.</p>
+
+<h3>Console</h3>
+
+<p>To open the MaxLand console, run the game, and simply hit the tilda (~) key,
+hit it again to close the console. The console is used to operate and change
+options of the game. </p>
+
+<h3>HELP</h3>
+
+<p>Use HELP command gives information on using the console, the following text
+will display: </p>
+
+<p>For detail help please type one of the following help commands:<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#helpcommands">HELP COMMANDS</a>
+(Displays the help of basic console commands)<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#helpediting">HELP EDITING</a>
+(Displays the help of editing files in console)</p>
+
+<h3><a name=helpcommands></a>HELP COMMANDS</h3>
+
+<p>Use HELP COMMANDS to view further informational help on the commands
+recognized by the console, the following text will display: </p>
+
+<p>Console Commands:<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#exit">EXIT</a> (completely exit
+out of the game)<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#echo">ECHO &lt;Text&gt;</a>
+(Displays Text in the console)<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#eval">EVAL &lt;Text&gt;</a>
+(Evalutes Text as a console command)<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#fade">FADE &lt;Text&gt;</a>
+(Displays Text in the center of screen)<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#draw">DRAW &lt;X&gt; &lt;Y&gt;
+&lt;Text&gt;</a> (Draw Text on the screen at X,Y)<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#print">PRINT &lt;Row&gt;
+&lt;Col&gt; &lt;Test&gt;</a> (Like DRAW but use row,col)<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#clear">CLEAR</a> (Clears all text
+being drawn by DRAW or PRINT)<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#stat">STAT</a> (Displays XYZ,
+Distance, Camera Angle and Pitch)<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#level">LEVEL [&lt;Title&gt;]</a>
+(Load a Title PX in the Levels Folder)<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#reset">RESET</a> (Resets the game
+reloading everything like new)<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#spectate">SPECTATE</a> (Change in
+game involvement to a spectator)<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#join">JOIN</a> (Rejoins the game
+when yopur in spectator mode)</p>
+
+<h3><a name=helpediting></a>HELP EDITING</h3>
+
+<p>Use HELP EDITING to view commands that allow live editing of game data files
+during play, the following text will display: </p>
+
+<p>Editing Commands:<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#refresh">REFRESH</a> (This
+command will cause the engine to reload the game files)<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#load">LOAD &lt;file&gt;</a> (This
+command loads the specified file to be edited live)<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#view">VIEW &lt;#[-#]&gt;</a>
+(This command displays the specified line numbers text)<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#lines">LINES &lt;#[-#]&gt;</a>
+(This command adds lines # to the current loaded file)<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#edit">EDIT &lt;#&gt; &lt;text&gt;</a>
+(This command changes the specified line numbers text)<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#save">SAVE</a> (This command
+saves any edited changes made with a loaded file)<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(For information on object and identifier
+editing see documentation)</p>
+
+<h3><a name=exit></a>EXIT</h3>
+
+<p>Exits the game, the ESC key will also exit the game (in windowed mode,
+hitting the ESC key twice exists the game, once frees the most from the game,
+if the mouse is freed and the console is open, the ESC key a second time will
+not close the program, while the movement controls are paused when the console is
+open, you may still type to the console). </p>
+
+<h3><a name=echo></a>ECHO &lt;Text&gt;</h3>
+
+<p>This command simply prints the supplied text to the console as the most
+recent message. There is no evaluation of variables with the use of this
+command, to display variable values evaluated, use this command in conjunction
+with the eval command. Example &quot;eval echo $variable.value&quot; </p>
+
+<h3><a name=eval></a>EVAL &lt;Text&gt;</h3>
+
+<p>This command will execute the supplied text and executes it as a command
+also evaluating any variable to its value before execution and not during. </p>
+
+<h3><a name=fade></a>FADE &lt;Text&gt;</h3>
+
+<p>This command draws the supplied text on the gaming screen at the location X
+and Y based on pixels. This command can be called multiple times and each time
+the text will remain on the screen until the clear command is used, reversing
+all calls to print and draw. </p>
+
+<h3><a name=draw></a>DRAW &lt;X&gt; &lt;Y&gt; &lt;Text&gt;</h3>
+
+<p>This command draws the supplied text on the gaming screen at the location
+Row and Col based on rows and columns defined by the size of the screen font.
+This command can be called multiple times and each time the text will remain on
+the screen until the clear command is used, reversing all calls to print and
+draw. </p>
+
+<h3><a name=print></a>PRINT &lt;Row&gt; &lt;Col&gt; &lt;Test&gt;</h3>
+
+<p>This command reverses all calls to print and draw clearing any text that is
+currently being drawn on the gaming screen. </p>
+
+<h3><a name=clear></a>CLEAR</h3>
+
+<p>This command reveals your location (X, Y and Z coordinates), your distance
+to 0,0,0 (the start), the camera's angle, and the camera's pitch (when in third
+person mode). </p>
+
+<h3><a name=stat></a>STAT</h3>
+
+<p>This command will load the PX file of the Title supplied which must be under
+the Levels directory which is located in the program files directory of the
+game installation. </p>
+
+<h3><a name=level></a>LEVEL [&lt;Title&gt;]</h3>
+
+<p>This command resets the current level to the initial stat as if it were
+loaded for the first time, resetting any standing personal saved information. </p>
+
+<h3><a name=reset></a>RESET</h3>
+
+<p>This command places you into a spectator mode of gaming which allows you to
+free-fly around but not interact with the level and game. This mode is also
+used to debug and place cameras for the camera view perspective mode. </p>
+
+<h3><a name=spectate></a>SPECTATE</h3>
+
+<p>This command places you back into the game as a player from spectate mode. </p>
+
+<h3><a name=join></a>JOIN</h3>
+
+<h3><a name=refresh></a>REFRESH</h3>
+
+<p>This command will refresh all the current game data from the game folder. </p>
+
+<h3><a name=load></a>LOAD &lt;file&gt;</h3>
+
+<p>The load command takes one parameter or none, specifying the filename of a
+file located under the game data folder to be loaded. Once loaded the file can
+be viewed, edited and saved, if you type the command with out a parameter it
+shows the currently loaded file. </p>
+
+<h3><a name=view></a>VIEW &lt;#[-#]&gt;</h3>
+
+<p>This command takes one parameter, either a single line number to be
+displayed, or a line number range between two numbers specified seperate by a
+single dash. The line numbers text of the current loaded file will print to the
+console. </p>
+
+<h3><a name=lines></a>LINES &lt;#[-#]&gt;</h3>
+
+<p>This command adds blank lines to the currently loaded file, it takes one
+parameter, either a single line number, or a line number range between two
+numbers specified seperate by a single dash. Blank lines will be added at the
+line location with out overwriting the line. </p>
+
+<h3><a name=edit></a>EDIT &lt;#&gt; &lt;text&gt;</h3>
+
+<p>This command takes two parameters, a single line number, and any text after
+it. The line number specified will be set to the text provided overwriting the
+line in the currently loaded file. </p>
+
+<h3><a name=save></a>SAVE</h3>
+
+<p>This command takes no parameters, it simply saves the currently loaded file
+which should exist as the loaded file. To view the loaded filename you can use
+the load command with out any parameters. </p>
+
+<p>&nbsp;</p>
+
+<p>&nbsp;</p>
+
+</div>
+
+</body>
+
+</html>
